--- a/view/templets/home/user/vip_anquan.html
+++ b/view/templets/home/user/vip_anquan.html
@@ -66,7 +66,7 @@ $(function(){
 			<div class="bangding01" style="background-image:url(<{$templets}>/index/images/anquan01.png)">邮箱验证</div>
 			<div class="bangding02">邮箱验证后，可第一时间收到最新订单信息等</div>
 			<div class="bangding03">
-				<div class="an"><a href="/home/user/vip_youxiang_yanzheng01">去修改</a></div>
+				<div class="an"><a href="/home/user/vip_youxiang_yanzheng01"><{$b}>去修改</a></div>
 			</div>
 			<{/if}>
         </div>
