--- a/view/templets/home/user/vip_youxiang_yanzheng02.html
+++ b/view/templets/home/user/vip_youxiang_yanzheng02.html
@@ -41,7 +41,7 @@ $(function(){
     	<div class="com_dan">修改绑定邮箱</div>
         <div class="bangding_img"><img src="<{$templets}>/index/images/cg001.png"></div>
     	<div class="fasong">
-        已经向您的275056158@qq.com邮箱发送了一封验证邮件。请您<a href="">登录邮箱</a>完成验证。<br>
+        已经向您的<{$email}>邮箱发送了一封验证邮件。请您<a href="">登录邮箱</a>完成验证。<br>
         您没有收到邮件？<br>
         查看垃圾邮件，邮件有可能被误认为垃圾邮件<br>
         如果5分钟后还没收到邮件，请点击<a href="/home/user/vip_youxiang_yanzheng01">重新发送</a>邮件
@@ -49,6 +49,8 @@ $(function(){
         </div>
   </div>
 </div>
+
+
 <<!--footer-->
 <{include file="common_foot.html"}>
 
